doc: 전표등록 sql 초기데이터 생성중